Change Firebase config for new project
Updated Firebase configuration with new project details.

--- a/index.html
+++ b/index.html
@@ -176,12 +176,13 @@
         const appId = typeof __app_id !== 'undefined' ? __app_id : 'guild-draft-board-1'; // Fixed external ID
         const firebaseConfig = typeof __firebase_config !== 'undefined' ? JSON.parse(__firebase_config) : {
             // --- IMPORTANT: REPLACE THESE WITH YOUR OWN FIREBASE PROJECT CONFIGURATION ---
-            apiKey: "YOUR_API_KEY_HERE", 
-            authDomain: "your-project-id.firebaseapp.com", 
-            projectId: "your-project-id-12345", 
-            storageBucket: "your-project-id.appspot.com",
-            messagingSenderId: "123456789012",
-            appId: "1:12345678901:web:abcdef1234567890abcdef"
+            apiKey: "AIzaSyBxl0Y7VvxDBk8BMXIi3j3QE3hRFOvuPrA",
+            authDomain: "tp-house-raffle.firebaseapp.com",
+            projectId: "tp-house-raffle",
+            storageBucket: "tp-house-raffle.firebasestorage.app",
+            messagingSenderId: "886855375377",
+            appId: "1:886855375377:web:c89f6a41fc767b17242fb0",
+            measurementId: "G-F0H21ZHF84"
             // The keys above must be replaced for live functionality!
         };
         const initialAuthToken = typeof __initial_auth_token !== 'undefined' ? __initial_auth_token : null;
