Update winnerName in initialPicks array

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
         const PICK_COLLECTION_PATH = `artifacts/${appId}/public/data/picks`;
 
         const initialPicks = [
-            { rank: 1, winnerName: "Thordar", chosenPlot: "Plot 18" },
+            { rank: 1, winnerName: "Lygerxd", chosenPlot: "Plot 18" },
             { rank: 2, winnerName: "Grizelda", chosenPlot: "Plot 44" },
             { rank: 3, winnerName: "Balthazar", chosenPlot: "Plot 3" },
             { rank: 4, winnerName: "Anya", chosenPlot: "PENDING..." },
