--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </style>
 </head>
 <body class="bg-gray-900 text-gray-100 min-h-screen p-4 sm:p-8">
-
+<!-- FORCED REFRESH October 17 -->
     <div class="max-w-7xl mx-auto">
         <!-- Header -->
         <header class="text-center mb-12">
