Change Firebase API key placeholder
Updated Firebase API key placeholder for live environment.

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
 
         async function initFirebase() {
             // Check if the essential API key placeholder is still present when running externally
-            if (firebaseConfig.apiKey === "YOUR_API_KEY_HERE" && typeof __firebase_config === 'undefined') {
+            if (firebaseConfig.apiKey === "AIzaSyBxl0Y7VvxDBk8BMXIi3j3QE3hRFOvuPrA" && typeof __firebase_config === 'undefined') {
                 displayMessage("🚨 ERROR: The live board requires Firebase setup. Please replace the placeholder API key in the code!", true);
                 loadingStatus.classList.add('hidden');
                 return;
