Clarify Firebase configuration keys in index.html
Updated Firebase configuration comments for clarity.

--- a/index.html
+++ b/index.html
@@ -174,16 +174,14 @@
         // You MUST replace the placeholder values below with your actual Firebase project keys
         // to make the live database connection work on your GitHub Pages site!
         const appId = typeof __app_id !== 'undefined' ? __app_id : 'guild-draft-board-1'; // Fixed external ID
+        // Final Correct Structure
         const firebaseConfig = typeof __firebase_config !== 'undefined' ? JSON.parse(__firebase_config) : {
-            // --- IMPORTANT: REPLACE THESE WITH YOUR OWN FIREBASE PROJECT CONFIGURATION ---
-            apiKey: "AIzaSyBxl0Y7VvxDBk8BMXIi3j3QE3hRFOvuPrA",
-            authDomain: "tp-house-raffle.firebaseapp.com",
-            projectId: "tp-house-raffle",
-            storageBucket: "tp-house-raffle.firebasestorage.app",
-            messagingSenderId: "886855375377",
-            appId: "1:886855375377:web:c89f6a41fc767b17242fb0",
-            measurementId: "G-F0H21ZHF84"
-            // The keys above must be replaced for live functionality!
+            apiKey: "AIzaSyBxl0Y7VvxDBk8BMXIi3j3QE3hRFOvuPrA", // YOUR KEY
+            authDomain: "tp-house-raffle.firebaseapp.com", // YOUR DOMAIN
+            projectId: "tp-house-raffle", // YOUR PROJECT ID
+            storageBucket: "tp-house-raffle.firebasestorage.app", // YOUR STORAGE BUCKET
+            messagingSenderId: "886855375377", // YOUR SENDER ID
+            appId: "1:886855375377:web:c89f6a41fc767b17242fb0" // YOUR APP ID
         };
         const initialAuthToken = typeof __initial_auth_token !== 'undefined' ? __initial_auth_token : null;
         
