Update name from 'Thordar' to 'Lygerxd'

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                                 <!-- Mock Entry Log Data -->
                                 <tr class="bg-gray-900/50">
                                     <td class="px-4 py-2 whitespace-nowrap text-sm">1</td>
-                                    <td class="px-4 py-2 whitespace-nowrap text-sm">Thordar</td>
+                                    <td class="px-4 py-2 whitespace-nowrap text-sm">Lygerxd</td>
                                     <td class="px-4 py-2 whitespace-nowrap text-sm">500g Donation</td>
                                     <td class="px-4 py-2 whitespace-nowrap text-sm">1 (Standard)</td>
                                 </tr>
