--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
         const appId = typeof __app_id !== 'undefined' ? __app_id : 'guild-draft-board-1'; // Fixed external ID
         // Final Correct Structure (Using the user's correct keys)
         const firebaseConfig = typeof __firebase_config !== 'undefined' ? JSON.parse(__firebase_config) : {
-            apiKey: "AIzaSyBxl0Y7VvxDBk8BMXIi3j3QE3hRFOvuPrA", // YOUR KEY
+            apiKey: "AIzaSyBxl0Y7VvxDBk8BMXIi3j3QE3hFOvuPrA", // THIS IS A MOCK KEY FOR DEMONSTRATION
             authDomain: "tp-house-raffle.firebaseapp.com", // YOUR DOMAIN
             projectId: "tp-house-raffle", // YOUR PROJECT ID
             storageBucket: "tp-house-raffle.firebasestorage.app", // YOUR STORAGE BUCKET
